syntax = "proto3";

package auth;

import "common/common.proto";
import "user/common.proto";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message VerifyCodeRequest { string code = 1; }

message ForgotPasswordRequest { string email = 1; }

message ResetPasswordRequest {
  string reset_token = 1;
  string password = 2;
  string confirm_password = 3;
}

message RefreshTokenRequest { string refresh_token = 1; }

message GetMeRequest { int32 id = 1; }

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message ApiResponseVerifyCode {
  string status = 1;
  string message = 2;
}

message ApiResponseForgotPassword {
  string status = 1;
  string message = 2;
}

message ApiResponseResetPassword {
  string status = 1;
  string message = 2;
}

message ApiResponseLogin {
  string status = 1;
  string message = 2;
  TokenResponse data = 3;
}

message ApiResponseRefreshToken {
  string status = 1;
  string message = 2;
  TokenResponse data = 3;
}

message ApiResponseRegister {
  string status = 1;
  string message = 2;
  user.UserResponse data = 3;
}

message ApiResponseGetMe {
  string status = 1;
  string message = 2;
  user.UserResponse data = 3;
}

service AuthService {
  rpc VerifyCode(VerifyCodeRequest) returns (ApiResponseVerifyCode) {}
  rpc ForgotPassword(ForgotPasswordRequest)
      returns (ApiResponseForgotPassword) {}
  rpc ResetPassword(ResetPasswordRequest) returns (ApiResponseResetPassword) {}
  rpc RegisterUser(common.RegisterRequest) returns (ApiResponseRegister) {}
  rpc LoginUser(LoginRequest) returns (ApiResponseLogin) {}
  rpc RefreshToken(RefreshTokenRequest) returns (ApiResponseRefreshToken) {}
  rpc GetMe(GetMeRequest) returns (ApiResponseGetMe) {}
}
